[gd_scene load_steps=19 format=3 uid="uid://bb2t4w1g5sfdt"]

[ext_resource type="Texture2D" uid="uid://ck2rvi0w4ayni" path="res://scenes/game_object/player/player.png" id="1_3te3t"]
[ext_resource type="Script" path="res://scenes/game_object/player/multiplayer_player.gd" id="1_multiplayer_player"]
[ext_resource type="Script" path="res://scenes/component/velocity_component.gd" id="2_50cuo"]
[ext_resource type="PackedScene" uid="uid://cadq5igil1kex" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_fjggr"]
[ext_resource type="PackedScene" uid="uid://dvho7o7f7skqi" path="res://scenes/component/health_component.tscn" id="2_xp7xg"]
[ext_resource type="PackedScene" uid="uid://ie88omkcfji6" path="res://scenes/component/random_stream_player_2d_component.tscn" id="5_ji1p0"]
[ext_resource type="AudioStream" uid="uid://drwuy386f0gf4" path="res://assets/audio/entity_sounds/impactMining_000.ogg" id="6_o1kv5"]
[ext_resource type="AudioStream" uid="uid://cnad5lnvbrpov" path="res://assets/audio/entity_sounds/impactMining_001.ogg" id="7_e5jp2"]
[ext_resource type="AudioStream" uid="uid://2vqax8bbjgf1" path="res://assets/audio/entity_sounds/impactMining_002.ogg" id="8_reyjt"]
[ext_resource type="AudioStream" uid="uid://baqufvw613gm5" path="res://assets/audio/entity_sounds/impactMining_003.ogg" id="9_iyy64"]
[ext_resource type="AudioStream" uid="uid://b406bywdm027e" path="res://assets/audio/entity_sounds/impactMining_004.ogg" id="10_nv5wx"]

[sub_resource type="Animation" id="Animation_nngp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_r5mg2"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sftm1"]
_data = {
"RESET": SubResource("Animation_nngp4"),
"walk": SubResource("Animation_r5mg2")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ufrm8"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3wlb6"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dwy4k"]
radius = 5.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:velocity")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("HealthComponent:current_health")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:synced_animation_state")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="MultiplayerPlayer" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_multiplayer_player")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sftm1")
}

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("2_50cuo")

[node name="HealthComponent" parent="." instance=ExtResource("2_xp7xg")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_fjggr")]

[node name="HitRandomStreamPlayer" parent="." instance=ExtResource("5_ji1p0")]
streams = Array[AudioStream]([ExtResource("6_o1kv5"), ExtResource("7_e5jp2"), ExtResource("8_reyjt"), ExtResource("9_iyy64"), ExtResource("10_nv5wx")])

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -16.0
offset_top = -25.0
offset_right = 16.0
offset_bottom = -21.0
value = 50.0
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_ufrm8")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_3te3t")
offset = Vector2(0, -8)

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_3wlb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dwy4k")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
offset_bottom = -30.0

[node name="NameLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
theme_override_font_sizes/font_size = 12
text = "Player"
horizontal_alignment = 1
vertical_alignment = 1